# audio-safety

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  experiment1_refusal_cone_drift_probe.md  main.md  pyproject.toml
.claude/: settings.local.json
.claude/agents/: adversarial-reviewer.md  research-code-reviewer.md
configs/attacks/: jailbreak_templates.yaml
configs/datasets/: audio_rdo_attack_flip.yaml  audio_rdo_gate.yaml  run9_pilot_phase_frontend.yaml
configs/experiments/: exp1_refusal_cone_drift.yaml  exp1_refusal_cone_drift_fast.yaml  run4_attack_flip.yaml  run4_conversion_gap.yaml  run5_pitch_representation_fast.yaml  run7_coast_r_stage_a.yaml  run9_defense_gate.yaml  run9_defense_gate_pilot.yaml  run9_defense_judge.yaml  run9_sarsteer_paper.yaml
configs/models/: qwen2_audio.yaml
data/: README.md
outputs/: README.md
scripts/: analyze_causal_trace.py  analyze_conversion.py  analyze_flip.py  analyze_flip_dissociation.py  analyze_run10_recognition.py  analyze_run11_dissociation.py  analyze_run12_gates.py  analyze_run13_screen.py  analyze_t0.py  apply_sarsteer_defense.py  assemble_sarsteer_manual_labels.py  author_run10_anchors.py  behavioral_rescue_run11.py  build_almguard_defended_manifest.py  build_sarsteer_defense.py  cand4_correction_gate.py  cand4_gate_specificity.py  cand4_jnd_margin_probe.py  capture_run11_dissociation.py  capture_run12.py  causal_eval.py  causal_refusal_component.py  causal_rescue_flip.py  causal_trace_flip.py  channel_patch_analyze.py  channel_patch_l18.py  cosyvoice2_tts.py  diagnose_sarsteer_sweep.py  download_qwen2_audio.py  emotion_analyze.py  emotion_extract.py  evaluate_defense_gate.py  evaluate_rdo_gate.py  evaluate_sarsteer_preliminary.py  extract_conversion_activations.py  extract_rdo_activations.py  finalize_manual_sarsteer_core.py  finalize_manual_sarsteer_gate.py  fit_run12_axis.py  fit_run13_subspaces.py  (+69 more)
tests/: test_agent_judge_io.py  test_almguard_a40_patch.py  test_almguard_chunked.py  test_almguard_gate_pipeline.py  test_almguard_io.py  test_almguard_run9.py  test_almguard_training_data.py  test_alpha_selection.py  test_assemble_sarsteer_manual_labels.py  test_attack_flip.py  test_audio_rdo.py  test_causal_trace.py  test_channel_axis.py  test_channel_patching.py  test_coast_r.py  test_coast_r_pipeline.py  test_config.py  test_continuation_scores.py  test_conversion_gap.py  test_conversion_probe.py  test_cosyvoice2_tts.py  test_defense_gate.py  test_defense_judge.py  test_defense_judge_taxonomy.py  test_diagnose_sarsteer_sweep.py  test_env.py  test_finalize_manual_sarsteer_gate.py  test_hooks.py  test_label_sarsteer_preliminary.py  test_merge_manual_sarsteer_labels.py  test_openrouter_pairs.py  test_paths.py  test_pitch_representation.py  test_prepare_run9_pilot_manifest.py  test_prepare_run9_sarsteer_adapted_gate.py  test_prepare_run9_sarsteer_quick_gate.py  test_qwen2_audio.py  test_render_run9_fresh_attacks.py  test_run13_rank_sweep.py  test_run9_asr.py  (+14 more)
(+128 files in other folders)
