[project]
name = "audio-safety"
version = "0.1.0"
description = "Audio-RDO refusal-axis experiments for audio language model safety"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.0",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "soundfile>=0.12",
    "tqdm>=4.66",
]

[dependency-groups]
dev = [
    "ruff>=0.5",
    "pytest>=8.0",
    "mypy>=1.10",
    "types-pyyaml",
]
gpu = [
    "torch>=2.3",
    "torchaudio>=2.3",
    "transformers>=4.48",
    "accelerate>=0.33",
    "datasets>=2.20",
    "librosa>=0.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/audio_safety"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PTH"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
packages = ["audio_safety"]
mypy_path = "src"
ignore_missing_imports = true
