[project]
name = "audio-safety"
version = "0.1.0"
description = "Audio-RDO refusal-axis experiments for audio language model safety"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.0",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "soundfile>=0.12",
    "tqdm>=4.66",
]

[dependency-groups]
dev = [
    "ruff>=0.5",
    "pytest>=8.0",
    "mypy>=1.10",
    "types-pyyaml",
]
gpu = [
    # RunPod A40 images for this experiment report CUDA runtime 12.8.
    # Keep torch/torchaudio pinned to the official cu128 wheel index below.
    "torch==2.9.1",
    "torchaudio==2.9.1",
    "transformers>=4.48",
    "accelerate>=0.33",
    "datasets>=2.20",
    "librosa>=0.10",
    "numba>=0.61",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]
torchaudio = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv]
default-groups = ["dev", "gpu"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/audio_safety"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PTH"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
packages = ["audio_safety"]
mypy_path = "src"
ignore_missing_imports = true
